--- a/assets/css/import.css
+++ b/assets/css/import.css
@@ -1,1 +1,56 @@
 @import "tailwindcss";
+
+* {
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+
+@theme {
+  --color-primary-color: #716cfe;
+
+  --font-Roboto-flex: "Roboto Flex", sans-serif;
+}
+
+::selection {
+  background-color: #716cfe;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #716cfe;
+}
+
+.customBorder {
+  position: relative;
+  box-sizing: border-box;
+}
+.customBorder::before {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  bottom: -1px;
+  right: -1px;
+  background: linear-gradient(to bottom, #716cfe 0%, #6A22D1 100%);
+  border-radius: 6px;
+}
+
+
+.fade-right {
+    position: relative;
+  }
+  
+  .fade-right::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(0,0,0,1), rgba(0,0,0,0));
+    pointer-events: none;
+  }
