--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,20 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-black: #000;
+    --color-white: #fff;
     --spacing: 0.25rem;
+    --text-lg: 1.125rem;
+    --text-lg--line-height: calc(1.75 / 1.125);
+    --text-xl: 1.25rem;
+    --text-xl--line-height: calc(1.75 / 1.25);
+    --font-weight-medium: 500;
+    --radius-lg: 0.5rem;
+    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --font-Roboto-flex: "Roboto Flex", sans-serif;
   }
 }
 @layer base {
@@ -159,60 +170,416 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
+  .right-\[-200px\] {
+    right: -200px;
+  }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
+  .bottom-\[-220px\] {
+    bottom: -220px;
+  }
+  .left-\[-200px\] {
+    left: -200px;
+  }
+  .left-\[50\%\] {
+    left: 50%;
+  }
+  .-z-0 {
+    z-index: calc(0 * -1);
+  }
+  .-z-10 {
+    z-index: calc(10 * -1);
+  }
+  .-z-20 {
+    z-index: calc(20 * -1);
+  }
+  .-z-30 {
+    z-index: calc(30 * -1);
+  }
+  .-z-40 {
+    z-index: calc(40 * -1);
+  }
+  .z-\[-60\] {
+    z-index: -60;
+  }
+  .z-\[-70\] {
+    z-index: -70;
+  }
   .mt-12 {
     margin-top: calc(var(--spacing) * 12);
   }
   .flex {
     display: flex;
   }
-  .table {
-    display: table;
+  .h-\[626px\] {
+    height: 626px;
+  }
+  .min-h-\[626px\] {
+    min-height: 626px;
+  }
+  .w-\[2200px\] {
+    width: 2200px;
+  }
+  .w-\[2500px\] {
+    width: 2500px;
   }
   .w-full {
     width: 100%;
   }
-  .border-collapse {
-    border-collapse: collapse;
+  .max-w-\[1440px\] {
+    max-width: 1440px;
   }
-  .resize {
-    resize: both;
+  .max-w-\[1920px\] {
+    max-width: 1920px;
+  }
+  .min-w-\[2200px\] {
+    min-width: 2200px;
+  }
+  .min-w-\[2500px\] {
+    min-width: 2500px;
+  }
+  .translate-x-\[-50\%\] {
+    --tw-translate-x: -50%;
+    translate: var(--tw-translate-x) var(--tw-translate-y);
+  }
+  .transform-\[translateY\(45\%\)\] {
+    transform: translateY(45%);
+  }
+  .transform-\[translateY\(60\%\)\] {
+    transform: translateY(60%);
+  }
+  .transform-\[translateY\(62\%\)\] {
+    transform: translateY(62%);
+  }
+  .transform-\[translateY\(65\%\)\] {
+    transform: translateY(65%);
+  }
+  .transform-\[translateY\(75\%\)\] {
+    transform: translateY(75%);
+  }
+  .flex-col {
+    flex-direction: column;
+  }
+  .items-center {
+    align-items: center;
+  }
+  .justify-between {
+    justify-content: space-between;
+  }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
+  .gap-6 {
+    gap: calc(var(--spacing) * 6);
+  }
+  .overflow-hidden {
+    overflow: hidden;
+  }
+  .rounded-\[6px\] {
+    border-radius: 6px;
+  }
+  .rounded-lg {
+    border-radius: var(--radius-lg);
   }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-white\/4 {
+    border-color: color-mix(in srgb, #fff 4%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      border-color: color-mix(in oklab, var(--color-white) 4%, transparent);
+    }
+  }
+  .bg-\[\#0D0D0D\] {
+    background-color: #0D0D0D;
+  }
   .bg-black {
     background-color: var(--color-black);
   }
-  .px-2 {
-    padding-inline: calc(var(--spacing) * 2);
+  .bg-gradient-to-b {
+    --tw-gradient-position: to bottom in oklab;
+    background-image: linear-gradient(var(--tw-gradient-stops));
+  }
+  .from-\[\#716CFF\] {
+    --tw-gradient-from: #716CFF;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[\#5C0BCD\] {
+    --tw-gradient-to: #5C0BCD;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .\[mask-image\:linear-gradient\(to_left\,black\,transparent\)\] {
+    mask-image: linear-gradient(to left,black,transparent);
+  }
+  .\[mask-image\:linear-gradient\(to_left\,black_0\%\,black_80\%\,transparent_100\%\)\] {
+    mask-image: linear-gradient(to left,black 0%,black 80%,transparent 100%);
+  }
+  .\[mask-image\:linear-gradient\(to_left\,black_80\%\,transparent\)\] {
+    mask-image: linear-gradient(to left,black 80%,transparent);
+  }
+  .\[mask-image\:linear-gradient\(to_left\,black_80\%\,transparent_100\%\)\] {
+    mask-image: linear-gradient(to left,black 80%,transparent 100%);
+  }
+  .\[mask-image\:linear-gradient\(to_left\,transparent\,black\)\] {
+    mask-image: linear-gradient(to left,transparent,black);
+  }
+  .\[mask-image\:linear-gradient\(to_right\,black\,transparent\)\] {
+    mask-image: linear-gradient(to right,black,transparent);
+  }
+  .\[mask-image\:linear-gradient\(to_right\,black_0\%\,black_80\%\,transparent_100\%\)\] {
+    mask-image: linear-gradient(to right,black 0%,black 80%,transparent 100%);
+  }
+  .\[mask-image\:linear-gradient\(to_right\,black_80\%\,transparent\)\] {
+    mask-image: linear-gradient(to right,black 80%,transparent);
+  }
+  .\[mask-image\:linear-gradient\(to_right\,black_80\%\,transparent_100\%\)\] {
+    mask-image: linear-gradient(to right,black 80%,transparent 100%);
+  }
+  .\[mask-image\:linear-gradient\(to_right\,transparent\,black\)\] {
+    mask-image: linear-gradient(to right,transparent,black);
   }
   .px-2\.5 {
     padding-inline: calc(var(--spacing) * 2.5);
   }
-  .underline {
-    text-decoration-line: underline;
+  .px-4 {
+    padding-inline: calc(var(--spacing) * 4);
   }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
+  .py-2\.5 {
+    padding-block: calc(var(--spacing) * 2.5);
   }
+  .py-3 {
+    padding-block: calc(var(--spacing) * 3);
+  }
+  .font-Roboto-flex {
+    font-family: var(--font-Roboto-flex);
+  }
+  .text-lg {
+    font-size: var(--text-lg);
+    line-height: var(--tw-leading, var(--text-lg--line-height));
+  }
+  .text-xl {
+    font-size: var(--text-xl);
+    line-height: var(--tw-leading, var(--text-xl--line-height));
+  }
+  .font-medium {
+    --tw-font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-medium);
+  }
+  .tracking-\[-0\.04em\] {
+    --tw-tracking: -0.04em;
+    letter-spacing: -0.04em;
+  }
+  .text-white {
+    color: var(--color-white);
+  }
+  .text-white\/30 {
+    color: color-mix(in srgb, #fff 30%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      color: color-mix(in oklab, var(--color-white) 30%, transparent);
+    }
+  }
+  .mix-blend-hard-light {
+    mix-blend-mode: hard-light;
+  }
+  .mix-blend-plus-lighter {
+    mix-blend-mode: plus-lighter;
+  }
+  .transition-colors {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .duration-500 {
+    --tw-duration: 500ms;
+    transition-duration: 500ms;
+  }
+  .ease-in-out {
+    --tw-ease: var(--ease-in-out);
+    transition-timing-function: var(--ease-in-out);
+  }
+  .hover\:text-white\/60 {
+    &:hover {
+      @media (hover: hover) {
+        color: color-mix(in srgb, #fff 60%, transparent);
+        @supports (color: color-mix(in lab, red, red)) {
+          color: color-mix(in oklab, var(--color-white) 60%, transparent);
+        }
+      }
+    }
+  }
+}
+* {
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+::selection {
+  background-color: #716cfe;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #716cfe;
+}
+.customBorder {
+  position: relative;
+  box-sizing: border-box;
+}
+.customBorder::before {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  bottom: -1px;
+  right: -1px;
+  background: linear-gradient(to bottom, #716cfe 0%, #6A22D1 100%);
+  border-radius: 6px;
+}
+.fade-right {
+  position: relative;
+}
+.fade-right::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(0,0,0,1), rgba(0,0,0,0));
+  pointer-events: none;
+}
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-rotate-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-y {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-rotate-z {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-x {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-skew-y {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-border-style {
   syntax: "*";
   inherits: false;
   initial-value: solid;
 }
-@property --tw-outline-style {
+@property --tw-gradient-position {
   syntax: "*";
   inherits: false;
-  initial-value: solid;
+}
+@property --tw-gradient-from {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-via {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-to {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-via-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 0%;
+}
+@property --tw-gradient-via-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 50%;
+}
+@property --tw-gradient-to-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 100%;
+}
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-tracking {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ease {
+  syntax: "*";
+  inherits: false;
 }
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
+      --tw-rotate-x: initial;
+      --tw-rotate-y: initial;
+      --tw-rotate-z: initial;
+      --tw-skew-x: initial;
+      --tw-skew-y: initial;
       --tw-border-style: solid;
-      --tw-outline-style: solid;
+      --tw-gradient-position: initial;
+      --tw-gradient-from: #0000;
+      --tw-gradient-via: #0000;
+      --tw-gradient-to: #0000;
+      --tw-gradient-stops: initial;
+      --tw-gradient-via-stops: initial;
+      --tw-gradient-from-position: 0%;
+      --tw-gradient-via-position: 50%;
+      --tw-gradient-to-position: 100%;
+      --tw-font-weight: initial;
+      --tw-tracking: initial;
+      --tw-duration: initial;
+      --tw-ease: initial;
     }
   }
 }
